# RCSB_UTILS_SEQ HISTORY
  11-Dec-2018  - V0.10 Created module supporting PDB - UniProt mapping using SIFTS
  19-Mar-2019    V0.11 Incorporate UniProt feature extraction tools.
  22-Apr-2019    V0.12 Improve cache management, broaden test coverage
  24-Jun-2019    V0.13 Update developmemt workflow
  14-Jul-2019    V0.14 Fix py27 minidom issue with 'in' operation.
   9-Sep-2019    V0.15 Add SiftsUtils() -> SiftsSummaryProvider()
  10-Sep-2019    V0.16 Convert case on PDB accession codes
  18-Sep-2019    V0.17 Add alignment details to the cache file
  18-Sep-2019    V0.18 Address Py27 dependency issue
  19-Sep-2019    V0.19 Move SeqAlign() utility class to this module
  23-Sep-2019    V0.20 Guarantee order and uniqueness from SiftsProvider.getIndentifiers()
   6-Oct-2019    V0.21 Include GO in the abbreviated set
   6-Oct-2019    V0.22 Make the content extracted subject to an API control to avoid Azure testing issues
  12-Oct-2019    V0.23 Add method SiftsSummaryProvider.getLongestAlignments()
  16-Oct-2019    V0.24 Address variable record length in reading SIFTS GO data.
  16-Oct-2019    V0.25 Update handling of secondary reference assignment mapping
  17-Oct-2019    V0.26 Include taxonomy with accession code mapping
  23-Nov-2019    V0.27 Move pipeline to py38
   6-Dec-2019    V0.28 Add rebuildMatchResultIndex() to refresh the match index.
   9-Dec-2019    V0.29 Add reformat method to support ExDB schema spec.
  15-Dec-2019    V0.30 Add method to provide unique UniProt accessions.